# solid-lamp

./: CMakeLists.txt  EResolution.cpp  EResolution.h  ListingManufacturer.cpp  ListingManufacturer.h  ListingObject.cpp  ListingObject.h  README.md  SortableChallenge_VC15.sln  SortableChallenge_VC15.vcxproj  StringMatcher.cpp  StringMatcher.h  main.cpp
data/: results.txt
